# tkr_qulacs_worker

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  def.json  devenv.nix  out.json
.github/workflows/: ci.yml  release-plz.yml
data/: bell_measurement.json  chemistry.json  phasedx.json  phasedx_zzphase.json  zzphase.json
nix/: 0001-patch-out-fetching.patch  0002-install-headers.patch  0003-namespace-the-paths.patch  qulacs.nix
src/: main.rs  results.rs
src/snapshots/: qulacs_worker__tests__bell_measurement_circuit_seeded.snap  qulacs_worker__tests__bell_measurement_circuit_seeded.snap.new  qulacs_worker__tests__chemistry_example_circuit_seeded.snap  qulacs_worker__tests__chemistry_example_circuit_seeded.snap.new  qulacs_worker__tests__phased_x_circuit_seeded.snap  qulacs_worker__tests__phased_x_circuit_seeded.snap.new  qulacs_worker__tests__phased_x_zz_phase_circuit_seeded.snap  qulacs_worker__tests__phased_x_zz_phase_circuit_seeded.snap.new  tkr_qulacs_worker__tests__bell_measurement_circuit_seeded.snap  tkr_qulacs_worker__tests__bell_measurement_circuit_seeded.snap.new  tkr_qulacs_worker__tests__chemistry_example_circuit_seeded.snap  tkr_qulacs_worker__tests__chemistry_example_circuit_seeded.snap.new  tkr_qulacs_worker__tests__phased_x_circuit_seeded.snap  tkr_qulacs_worker__tests__phased_x_circuit_seeded.snap.new  tkr_qulacs_worker__tests__phased_x_zz_phase_circuit_seeded.snap  tkr_qulacs_worker__tests__phased_x_zz_phase_circuit_seeded.snap.new  tkr_qulacs_worker__tests__seeded_rng-2.snap  tkr_qulacs_worker__tests__seeded_rng.snap  (+1 more)
