[package]
name = "tkr_qulacs_worker"
description = "Tierkreis Worker for running Qulacs simulations"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
keywords = ["quantum", "simulator", "qulacs", "tierkreis"]

[features]
mpi = ["dep:mpi"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tket-json-rs = "0.7.2"
qulacs-bridge = { version = "0.1", features = ["num"] }
num = "0.4.3"
bitvec = "1.0.1"
rand = "0.9.0"
anyhow = "1.0.98"
fasteval = "0.2.4"
mpi = { version = "0.8.0", optional = true }

[dev-dependencies]
insta = "1.42.2"
rstest = "0.25.0"
